@@ -8,6 +8,7 @@ import org.springframework.stereotype.Component;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 public class CandidateUpdatesConverter implements EntityConverter<CandidateUpdate, CandidateUpdateDto> {
@@ -26,7 +27,7 @@ public class CandidateUpdatesConverter implements EntityConverter<CandidateUpdat
         return candidateUpdates
                 .stream()
                 .map(this::convertToEntityDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
